--- a/.gitignore
+++ b/.gitignore
@@ -1,68 +1,56 @@
-# Node.js
-/node_modules
-/.pnp
+node_modules/
+.pnp/
 .pnp.js
+
+build/
+dist/
+
+coverage/
+*.lcov
+.nyc_output/
+
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
+
 package-lock.json
 yarn.lock
 .pnpm-lock.yaml
 
-# Logs
-logs
-*.log
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage & test
-coverage
-*.lcov
-.nyc_output
-
-# Dependency directories
-jspm_packages/
-
-# TypeScript
-*.tsbuildinfo
-
-# Optional npm cache
-.npm
-
-# Grunt intermediate storage
-.grunt
-
-# Parcel cache
-.cache
-.parcel-cache
-
-# Build output
-/build
-/dist
-
-# dotenv
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# React / Frontend
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+*.tsbuildinfo
+
+.cache/
+.parcel-cache/
+.npm/
+.grunt/
+jspm_packages/
+.history/
+.stylelintcache
+.eslintcache
+
 .DS_Store
-**/*.backup.*
-**/*.back.*
 *.sublime*
 *.psd
 *.thumb
 *.sketch
+**/*.backup.*
+**/*.back.*
 
-# Visual Studio Code
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -70,12 +58,4 @@ jspm_packages/
 !.vscode/extensions.json
 !.vscode/*.code-snippets
 
-# Local History for VSCode
-.history/
-
-# Optional stylelint/eslint cache
-.stylelintcache
-.eslintcache
-
-# REPL history
 .node_repl_history
