--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,23 @@
-node_modules/
-.pnp/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
 .pnp.js
 
-build/
-dist/
+# testing
+/coverage
 
-coverage/
-*.lcov
-.nyc_output/
+# production
+/build
 
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
-
-package-lock.json
-yarn.lock
-.pnpm-lock.yaml
-
-.env
+# misc
+.DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-pids/
-*.pid
-*.seed
-*.pid.lock
-
-*.tsbuildinfo
-
-.cache/
-.parcel-cache/
-.npm/
-.grunt/
-jspm_packages/
-.history/
-.stylelintcache
-.eslintcache
-
-.DS_Store
-*.sublime*
-*.psd
-*.thumb
-*.sketch
-**/*.backup.*
-**/*.back.*
-
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
-
-.node_repl_history
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
