--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@monaco-editor/react": "^4.7.0",
     "@redux-devtools/extension": "^3.3.0",
+    "@stomp/stompjs": "^7.2.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
@@ -20,6 +21,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-actions": "^3.0.3",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.19",
     "styled-reset": "^4.5.2",
     "swiper": "^12.0.3",
