--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@monaco-editor/react": "^4.7.0",
+    "@react-three/cannon": "^6.6.0",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
     "@redux-devtools/extension": "^3.3.0",
     "@stomp/stompjs": "^7.2.1",
     "@testing-library/dom": "^10.4.0",
@@ -25,6 +28,7 @@
     "styled-components": "^6.1.19",
     "styled-reset": "^4.5.2",
     "swiper": "^12.0.3",
+    "three": "^0.181.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
